--- a/SkyrimSoulsRE.vcxproj.filters
+++ b/SkyrimSoulsRE.vcxproj.filters
@@ -44,7 +44,9 @@
     <ClInclude Include="include\Utility.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="version.h" />
+    <ClInclude Include="include\version.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="version.rc" />
