--- a/SkyrimSoulsRE.vcxproj.filters
+++ b/SkyrimSoulsRE.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClInclude Include="include\version.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="include\Offsets.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="version.rc" />
