--- a/SkyrimSoulsRE.vcxproj
+++ b/SkyrimSoulsRE.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="include\Settings.h" />
     <ClInclude Include="include\Utility.h" />
     <ClInclude Include="include\version.h" />
+    <ClInclude Include="include\Offsets.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="version.rc" />
