--- a/SkyrimSoulsRE.vcxproj.filters
+++ b/SkyrimSoulsRE.vcxproj.filters
@@ -106,6 +106,9 @@
     <ClCompile Include="src\AudioHooks.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\ItemMenuUpdater.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="exports.def" />
@@ -245,6 +248,9 @@
     </ClInclude>
     <ClInclude Include="include\Menus\CombatAlertOverlayMenu.h">
       <Filter>include\Menus</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ItemMenuUpdater.h">
+      <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
